--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,6 +34,13 @@ pipeline {
             }
          }
       }
+      stage("Tag and Push") {
+         steps {
+                sh "docker tag jenkins-pipeline_web:latest Sh8wN/jenkins-app:${BUILD_NUMBER}"
+                sh "docker login -u Sh8wN -p T*27ulydldl"
+                sh "docker push Sh8wN/jenkins-app:${BUILD_NUMBER}"
+         }
+      }
       stage("deploy") {
          steps {
             sh "docker-compose up -d"
