--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,9 +36,9 @@ pipeline {
       }
       stage("Tag and Push") {
          steps {
-                sh "docker tag jenkins-pipeline_web:latest sh8wn/jenkins-app:${BUILD_NUMBER}"
-                sh "docker login -u sh8wn -p T*27ulydldl"4
-                sh "docker push sh8wn/jenkins-app:${BUILD_NUMBER}"
+                sh "docker tag jenkins-pipeline_web:latest shwnix2/jenkins-app:${BUILD_NUMBER}"
+                sh "docker login -u shwnix2 -p T*27ulydldl"4
+                sh "docker push shwnix2/jenkins-app:${BUILD_NUMBER}"
          }
       }
       stage("deploy") {
